# swri_profiler

swri_profiler/include/swri_profiler/: profiler.h
swri_profiler/scripts/: record_profiler_data
swri_profiler/src/: profiler.cpp
swri_profiler_msgs/: CMakeLists.txt
swri_profiler_msgs/msg/: Event.msg  ProfileData.msg  ProfileEvent.msg  ProfileIndex.msg  ProfileIndexEntry.msg  ProfileLog.msg  ProfileLogArray.msg  ThreadData.msg
swri_profiler_tools/include/swri_profiler_tools/: profiler_msg_adapter.h  ros_source.h
swri_profiler_tools/scripts/: plot-profile-data
swri_profiler_tools/src/: profiler_msg_adapter.cpp  ros_source.cpp
